# hsd-light

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
.github/workflows/: publish.yml
hsd_light/: __init__.py  __main__.py  cli.py  config.py  device.py  protocol.py
