[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hsd-light"
version = "1.1.0"
description = "CLI tool & SDK for controlling HSD Love Light BLE device"
readme = "README_EN.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Yaniel Yu" },
]
keywords = ["bluetooth", "ble", "iot", "cli", "smart-light"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
]
dependencies = [
    "bleak>=0.21",
    "click>=8.1",
]

[project.urls]
Homepage = "https://github.com/yearliny/hsd-light"
Repository = "https://github.com/yearliny/hsd-light"
Issues = "https://github.com/yearliny/hsd-light/issues"

[project.scripts]
hsd = "hsd_light.cli:main"

[tool.setuptools.packages.find]
include = ["hsd_light*"]
